Fixed usages of deprecated Double constructor in test code
Components modified:
* camel-bindy
* camel-kafka